update illusion create view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3057,3 +3057,10 @@
   min-height: calc(100vh - 110px);
 }
 
+.illusion-featured-image {
+  height: 200px;
+  width: 100%;
+  border: 2px solid #ced4da;
+  border-radius: 4px;
+}
+
