--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -6,3 +6,9 @@
     min-height: calc(100vh - 110px);
 }
 
+.illusion-featured-image {
+    height: 200px;
+    width: 100%;
+    border: 2px solid #ced4da;
+    border-radius: 4px;
+}
